// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Inputs/Input Dark Background 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c2:active,
.c2:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Name"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/Input Filled 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c3:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c2:active,
.c2:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
}

.c4 {
  height: 38px;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        data-testid="input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Name"
      />
      <button
        className="c3 c4"
        data-testid="submit"
        onClick={[Function]}
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/Input Light Background 1`] = `
.c0 {
  padding: 1rem;
  background-color: #F5F5F5;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: 1px solid #C4C4C4;
  border: none;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(135,135,135,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c2:active,
.c2:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
  border: 1px solid #C4C4C4;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Name"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Inputs/Input With Button 1`] = `
.c0 {
  padding: 1rem;
  background-color: #6D6E70;
}

.c3 {
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 50px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  outline: none !important;
  white-space: nowrap;
  font-size: 16px;
  padding: 0px 32px;
  height: 40px;
  color: #FFF;
  background-color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c3:hover {
  color: #6D6E70;
  background-color: #FFF;
}

.c2 {
  background-color: #FFF;
  color: #252525;
  font-size: 14px;
  font-weight: 300;
  font-family: "NB International Pro",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  border-radius: 25px;
  padding: 0 20px;
  height: 45px;
  border: none;
  outline: none;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  width: 100%;
  border: none;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.c2:focus,
.c2:active {
  box-shadow: 0 0 10px rgba(0,0,0,0.8);
}

.c2::-webkit-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::-moz-placeholder {
  color: #252525;
  font-style: italic;
}

.c2:-ms-input-placeholder {
  color: #252525;
  font-style: italic;
}

.c2::placeholder {
  color: #252525;
  font-style: italic;
}

.c2:active,
.c2:focus {
  box-shadow: none;
}

.c1 {
  position: relative;
  width: 100%;
  border-radius: 25px;
  background-color: #FFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 4px;
  -webkit-transition: box-shadow 0.2s ease-out;
  transition: box-shadow 0.2s ease-out;
}

.c4 {
  height: 38px;
  padding-left: 15px;
  padding-right: 15px;
  font-size: 14px;
}

<div
  className="c0"
>
  <div
    style={
      Object {
        "maxWidth": 300,
      }
    }
  >
    <div
      className="c1"
    >
      <input
        className="c2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Name"
      />
      <button
        className="c3 c4"
        onClick={[Function]}
        type="button"
      >
        Send
      </button>
    </div>
  </div>
</div>
`;
